--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <h1>Tic Tac Toe</h1>
+    <div id="board">
+
+        <grid id="grid0" onclick="placeMarker(0).draw()"></grid>
+        <grid id="grid1" onclick="placeMarker(1).draw()"></grid>
+        <grid id="grid2" onclick="placeMarker(2).draw()"></grid>
+        <grid id="grid3" onclick="placeMarker(3).draw()"></grid>
+        <grid id="grid4" onclick="placeMarker(4).draw()"></grid>
+        <grid id="grid5" onclick="placeMarker(5).draw()"></grid>
+        <grid id="grid6" onclick="placeMarker(6).draw()"></grid>
+        <grid id="grid7" onclick="placeMarker(7).draw()"></grid>
+        <grid id="grid8" onclick="placeMarker(8).draw()"></grid>
+
+    </div>
 </body>
 </html>
