--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
+    <div id="header">
+        <h1>Tic Tac Toe</h1>
+        <button>Start</button>
+        <button>Restart</button>
+    </div>
+
     <div id="board">
 
         <grid id="grid0" onclick="placeMarker(0).draw()"></grid>
