pointer locks and unlocks on win and restart

--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
     <div id="header">
         <h1>Tic Tac Toe</h1>
         <button>Start</button>
-        <button>Restart</button>
+        <button onclick="restartGame()">Restart</button>
     </div>
 
-    <div id="board">
+    <div id="content">
+        <div id="board">
 
-        <grid id="grid0" onclick="placeMarker(0).draw()"></grid>
-        <grid id="grid1" onclick="placeMarker(1).draw()"></grid>
-        <grid id="grid2" onclick="placeMarker(2).draw()"></grid>
-        <grid id="grid3" onclick="placeMarker(3).draw()"></grid>
-        <grid id="grid4" onclick="placeMarker(4).draw()"></grid>
-        <grid id="grid5" onclick="placeMarker(5).draw()"></grid>
-        <grid id="grid6" onclick="placeMarker(6).draw()"></grid>
-        <grid id="grid7" onclick="placeMarker(7).draw()"></grid>
-        <grid id="grid8" onclick="placeMarker(8).draw()"></grid>
+            <grid id="grid0" onclick="placeMarker(0).draw()"></grid>
+            <grid id="grid1" onclick="placeMarker(1).draw()"></grid>
+            <grid id="grid2" onclick="placeMarker(2).draw()"></grid>
+            <grid id="grid3" onclick="placeMarker(3).draw()"></grid>
+            <grid id="grid4" onclick="placeMarker(4).draw()"></grid>
+            <grid id="grid5" onclick="placeMarker(5).draw()"></grid>
+            <grid id="grid6" onclick="placeMarker(6).draw()"></grid>
+            <grid id="grid7" onclick="placeMarker(7).draw()"></grid>
+            <grid id="grid8" onclick="placeMarker(8).draw()"></grid>
 
+        </div>
+
+        <!--resultDisplay goes here-->
     </div>
 </body>
 </html>
